crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_footnote_definition_in_list_item.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..138
  LIST@0..138
    LIST_ITEM@0..48
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..15
        TEXT@2..10 "item one"
        FOOTNOTE_REFERENCE@10..14
          FOOTNOTE_LABEL_START@10..12 "[^"
          FOOTNOTE_LABEL_ID@12..13 "a"
          FOOTNOTE_LABEL_END@13..14 "]"
        NEWLINE@14..15 "\n"
      BLANK_LINE@15..16
        BLANK_LINE@15..16 "\n"
      FOOTNOTE_DEFINITION@16..48
        WHITESPACE@16..18 "  "
        FOOTNOTE_LABEL_START@18..20 "[^"
        FOOTNOTE_LABEL_ID@20..21 "a"
        FOOTNOTE_LABEL_END@21..22 "]"
        FOOTNOTE_LABEL_COLON@22..23 ":"
        WHITESPACE@23..24 " "
        PARAGRAPH@24..48
          TEXT@24..47 "A note inside the item."
          NEWLINE@47..48 "\n"
    BLANK_LINE@48..49
      BLANK_LINE@48..49 "\n"
    LIST_ITEM@49..138
      LIST_MARKER@49..50 "-"
      WHITESPACE@50..51 " "
      PLAIN@51..64
        TEXT@51..59 "item two"
        FOOTNOTE_REFERENCE@59..63
          FOOTNOTE_LABEL_START@59..61 "[^"
          FOOTNOTE_LABEL_ID@61..62 "b"
          FOOTNOTE_LABEL_END@62..63 "]"
        NEWLINE@63..64 "\n"
      BLANK_LINE@64..65
        BLANK_LINE@64..65 "\n"
      FOOTNOTE_DEFINITION@65..108
        WHITESPACE@65..68 "   "
        FOOTNOTE_LABEL_START@68..70 "[^"
        FOOTNOTE_LABEL_ID@70..71 "b"
        FOOTNOTE_LABEL_END@71..72 "]"
        FOOTNOTE_LABEL_COLON@72..73 ":"
        WHITESPACE@73..74 " "
        PARAGRAPH@74..108
          TEXT@74..107 "Three more spaces sti ..."
          NEWLINE@107..108 "\n"
      BLANK_LINE@108..109
        BLANK_LINE@108..109 "\n"
      FOOTNOTE_DEFINITION@109..138
        WHITESPACE@109..112 "   "
        FOOTNOTE_LABEL_START@112..114 "[^"
        FOOTNOTE_LABEL_ID@114..115 "c"
        FOOTNOTE_LABEL_END@115..116 "]"
        FOOTNOTE_LABEL_COLON@116..117 ":"
        WHITESPACE@117..118 " "
        PARAGRAPH@118..138
          TEXT@118..137 "Sibling definition."
          NEWLINE@137..138 "\n"
