crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_footnote_fenced_code_indent.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..51
  PARAGRAPH@0..9
    TEXT@0..4 "Text"
    FOOTNOTE_REFERENCE@4..8
      FOOTNOTE_LABEL_START@4..6 "[^"
      FOOTNOTE_LABEL_ID@6..7 "1"
      FOOTNOTE_LABEL_END@7..8 "]"
    NEWLINE@8..9 "\n"
  BLANK_LINE@9..10
    BLANK_LINE@9..10 "\n"
  FOOTNOTE_DEFINITION@10..51
    FOOTNOTE_LABEL_START@10..12 "[^"
    FOOTNOTE_LABEL_ID@12..13 "1"
    FOOTNOTE_LABEL_END@13..14 "]"
    FOOTNOTE_LABEL_COLON@14..15 ":"
    WHITESPACE@15..16 " "
    PARAGRAPH@16..21
      TEXT@16..20 "note"
      NEWLINE@20..21 "\n"
    BLANK_LINE@21..22
      BLANK_LINE@21..22 "\n"
    CODE_BLOCK@22..51
      LINE_PREFIX@22..26 "    "
      CODE_FENCE_OPEN@26..30
        CODE_FENCE_MARKER@26..29 "```"
        NEWLINE@29..30 "\n"
      CODE_CONTENT@30..43
        LINE_PREFIX@30..34 "    "
        TEXT@34..42 "    deep"
        NEWLINE@42..43 "\n"
      LINE_PREFIX@43..47 "    "
      CODE_FENCE_CLOSE@47..51
        CODE_FENCE_MARKER@47..50 "```"
        NEWLINE@50..51 "\n"
