crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_footnote_marker_line_blocks.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..144
  PARAGRAPH@0..36
    TEXT@0..1 "x"
    FOOTNOTE_REFERENCE@1..5
      FOOTNOTE_LABEL_START@1..3 "[^"
      FOOTNOTE_LABEL_ID@3..4 "1"
      FOOTNOTE_LABEL_END@4..5 "]"
    TEXT@5..7 " y"
    FOOTNOTE_REFERENCE@7..11
      FOOTNOTE_LABEL_START@7..9 "[^"
      FOOTNOTE_LABEL_ID@9..10 "2"
      FOOTNOTE_LABEL_END@10..11 "]"
    TEXT@11..13 " z"
    FOOTNOTE_REFERENCE@13..17
      FOOTNOTE_LABEL_START@13..15 "[^"
      FOOTNOTE_LABEL_ID@15..16 "3"
      FOOTNOTE_LABEL_END@16..17 "]"
    TEXT@17..19 " w"
    FOOTNOTE_REFERENCE@19..23
      FOOTNOTE_LABEL_START@19..21 "[^"
      FOOTNOTE_LABEL_ID@21..22 "4"
      FOOTNOTE_LABEL_END@22..23 "]"
    TEXT@23..25 " v"
    FOOTNOTE_REFERENCE@25..29
      FOOTNOTE_LABEL_START@25..27 "[^"
      FOOTNOTE_LABEL_ID@27..28 "5"
      FOOTNOTE_LABEL_END@28..29 "]"
    TEXT@29..31 " u"
    FOOTNOTE_REFERENCE@31..35
      FOOTNOTE_LABEL_START@31..33 "[^"
      FOOTNOTE_LABEL_ID@33..34 "6"
      FOOTNOTE_LABEL_END@34..35 "]"
    NEWLINE@35..36 "\n"
  BLANK_LINE@36..37
    BLANK_LINE@36..37 "\n"
  FOOTNOTE_DEFINITION@37..71
    FOOTNOTE_LABEL_START@37..39 "[^"
    FOOTNOTE_LABEL_ID@39..40 "1"
    FOOTNOTE_LABEL_END@40..41 "]"
    FOOTNOTE_LABEL_COLON@41..42 ":"
    WHITESPACE@42..43 " "
    PIPE_TABLE@43..71
      TABLE_HEADER@43..49
        TABLE_CELL@43..44
          TEXT@43..44 "a"
        WHITESPACE@44..45 " "
        TEXT@45..46 "|"
        WHITESPACE@46..47 " "
        TABLE_CELL@47..48
          TEXT@47..48 "b"
        NEWLINE@48..49 "\n"
      TABLE_SEPARATOR@49..61
        LINE_PREFIX@49..53 "    "
        TABLE_SEP_DASHES@53..56 "---"
        TABLE_SEP_DELIM@56..57 "|"
        TABLE_SEP_DASHES@57..60 "---"
        NEWLINE@60..61 "\n"
      TABLE_ROW@61..71
        LINE_PREFIX@61..65 "    "
        TABLE_CELL@65..66
          TEXT@65..66 "c"
        WHITESPACE@66..67 " "
        TEXT@67..68 "|"
        WHITESPACE@68..69 " "
        TABLE_CELL@69..70
          TEXT@69..70 "d"
        NEWLINE@70..71 "\n"
  BLANK_LINE@71..72
    BLANK_LINE@71..72 "\n"
  FOOTNOTE_DEFINITION@72..82
    FOOTNOTE_LABEL_START@72..74 "[^"
    FOOTNOTE_LABEL_ID@74..75 "2"
    FOOTNOTE_LABEL_END@75..76 "]"
    FOOTNOTE_LABEL_COLON@76..77 ":"
    WHITESPACE@77..78 " "
    HORIZONTAL_RULE@78..82
      HORIZONTAL_RULE@78..81 "***"
      NEWLINE@81..82 "\n"
  BLANK_LINE@82..83
    BLANK_LINE@82..83 "\n"
  FOOTNOTE_DEFINITION@83..94
    FOOTNOTE_LABEL_START@83..85 "[^"
    FOOTNOTE_LABEL_ID@85..86 "3"
    FOOTNOTE_LABEL_END@86..87 "]"
    FOOTNOTE_LABEL_COLON@87..88 ":"
    WHITESPACE@88..89 " "
    LIST@89..94
      LIST_ITEM@89..94
        LIST_MARKER@89..90 "-"
        WHITESPACE@90..91 " "
        PLAIN@91..94
          TEXT@91..93 "li"
          NEWLINE@93..94 "\n"
  BLANK_LINE@94..95
    BLANK_LINE@94..95 "\n"
  FOOTNOTE_DEFINITION@95..105
    FOOTNOTE_LABEL_START@95..97 "[^"
    FOOTNOTE_LABEL_ID@97..98 "4"
    FOOTNOTE_LABEL_END@98..99 "]"
    FOOTNOTE_LABEL_COLON@99..100 ":"
    WHITESPACE@100..101 " "
    BLOCK_QUOTE@101..105
      BLOCK_QUOTE_MARKER@101..102 ">"
      WHITESPACE@102..103 " "
      PARAGRAPH@103..105
        TEXT@103..104 "q"
        NEWLINE@104..105 "\n"
  BLANK_LINE@105..106
    BLANK_LINE@105..106 "\n"
  FOOTNOTE_DEFINITION@106..133
    FOOTNOTE_LABEL_START@106..108 "[^"
    FOOTNOTE_LABEL_ID@108..109 "5"
    FOOTNOTE_LABEL_END@109..110 "]"
    FOOTNOTE_LABEL_COLON@110..111 ":"
    WHITESPACE@111..112 " "
    CODE_BLOCK@112..133
      CODE_FENCE_OPEN@112..116
        CODE_FENCE_MARKER@112..115 "```"
        NEWLINE@115..116 "\n"
      CODE_CONTENT@116..125
        LINE_PREFIX@116..120 "    "
        TEXT@120..124 "code"
        NEWLINE@124..125 "\n"
      LINE_PREFIX@125..129 "    "
      CODE_FENCE_CLOSE@129..133
        CODE_FENCE_MARKER@129..132 "```"
        NEWLINE@132..133 "\n"
  BLANK_LINE@133..134
    BLANK_LINE@133..134 "\n"
  FOOTNOTE_DEFINITION@134..144
    FOOTNOTE_LABEL_START@134..136 "[^"
    FOOTNOTE_LABEL_ID@136..137 "6"
    FOOTNOTE_LABEL_END@137..138 "]"
    FOOTNOTE_LABEL_COLON@138..139 ":"
    WHITESPACE@139..140 " "
    PARAGRAPH@140..144
      TEXT@140..143 "# h"
      NEWLINE@143..144 "\n"
