crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_footnote_ref_in_footnote_def_is_text.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..254
  PARAGRAPH@0..11
    TEXT@0..5 "Outer"
    FOOTNOTE_REFERENCE@5..9
      FOOTNOTE_LABEL_START@5..7 "[^"
      FOOTNOTE_LABEL_ID@7..8 "a"
      FOOTNOTE_LABEL_END@8..9 "]"
    TEXT@9..10 "."
    NEWLINE@10..11 "\n"
  BLANK_LINE@11..12
    BLANK_LINE@11..12 "\n"
  FOOTNOTE_DEFINITION@12..179
    FOOTNOTE_LABEL_START@12..14 "[^"
    FOOTNOTE_LABEL_ID@14..15 "a"
    FOOTNOTE_LABEL_END@15..16 "]"
    FOOTNOTE_LABEL_COLON@16..17 ":"
    WHITESPACE@17..18 " "
    PARAGRAPH@18..65
      TEXT@18..42 "Body has a [^b] ref and "
      STRONG@42..55
        STRONG_MARKER@42..44 "**"
        TEXT@44..53 "bold [^c]"
        STRONG_MARKER@53..55 "**"
      TEXT@55..64 " wrapper."
      NEWLINE@64..65 "\n"
    BLANK_LINE@65..66
      BLANK_LINE@65..66 "\n"
    PARAGRAPH@66..107
      WHITESPACE@66..70 "    "
      TEXT@70..106 "Continuation line wit ..."
      NEWLINE@106..107 "\n"
    BLANK_LINE@107..108
      BLANK_LINE@107..108 "\n"
    BLOCK_QUOTE@108..146
      WHITESPACE@108..112 "    "
      BLOCK_QUOTE_MARKER@112..113 ">"
      WHITESPACE@113..114 " "
      PARAGRAPH@114..146
        TEXT@114..145 "Nested blockquote has ..."
        NEWLINE@145..146 "\n"
    BLANK_LINE@146..147
      BLANK_LINE@146..147 "\n"
    LIST@147..179
      WHITESPACE@147..151 "    "
      LIST_ITEM@151..179
        LIST_MARKER@151..152 "-"
        WHITESPACE@152..153 " "
        PLAIN@153..179
          TEXT@153..178 "List in def has [^f]  ..."
          NEWLINE@178..179 "\n"
  BLANK_LINE@179..180
    BLANK_LINE@179..180 "\n"
  FOOTNOTE_DEFINITION@180..194
    FOOTNOTE_LABEL_START@180..182 "[^"
    FOOTNOTE_LABEL_ID@182..183 "b"
    FOOTNOTE_LABEL_END@183..184 "]"
    FOOTNOTE_LABEL_COLON@184..185 ":"
    WHITESPACE@185..186 " "
    PARAGRAPH@186..194
      TEXT@186..193 "B body."
      NEWLINE@193..194 "\n"
  BLANK_LINE@194..195
    BLANK_LINE@194..195 "\n"
  FOOTNOTE_DEFINITION@195..209
    FOOTNOTE_LABEL_START@195..197 "[^"
    FOOTNOTE_LABEL_ID@197..198 "c"
    FOOTNOTE_LABEL_END@198..199 "]"
    FOOTNOTE_LABEL_COLON@199..200 ":"
    WHITESPACE@200..201 " "
    PARAGRAPH@201..209
      TEXT@201..208 "C body."
      NEWLINE@208..209 "\n"
  BLANK_LINE@209..210
    BLANK_LINE@209..210 "\n"
  FOOTNOTE_DEFINITION@210..224
    FOOTNOTE_LABEL_START@210..212 "[^"
    FOOTNOTE_LABEL_ID@212..213 "d"
    FOOTNOTE_LABEL_END@213..214 "]"
    FOOTNOTE_LABEL_COLON@214..215 ":"
    WHITESPACE@215..216 " "
    PARAGRAPH@216..224
      TEXT@216..223 "D body."
      NEWLINE@223..224 "\n"
  BLANK_LINE@224..225
    BLANK_LINE@224..225 "\n"
  FOOTNOTE_DEFINITION@225..239
    FOOTNOTE_LABEL_START@225..227 "[^"
    FOOTNOTE_LABEL_ID@227..228 "e"
    FOOTNOTE_LABEL_END@228..229 "]"
    FOOTNOTE_LABEL_COLON@229..230 ":"
    WHITESPACE@230..231 " "
    PARAGRAPH@231..239
      TEXT@231..238 "E body."
      NEWLINE@238..239 "\n"
  BLANK_LINE@239..240
    BLANK_LINE@239..240 "\n"
  FOOTNOTE_DEFINITION@240..254
    FOOTNOTE_LABEL_START@240..242 "[^"
    FOOTNOTE_LABEL_ID@242..243 "f"
    FOOTNOTE_LABEL_END@243..244 "]"
    FOOTNOTE_LABEL_COLON@244..245 ":"
    WHITESPACE@245..246 " "
    PARAGRAPH@246..254
      TEXT@246..253 "F body."
      NEWLINE@253..254 "\n"
