crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_grid_table_in_list_blockquote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..70
  LIST@0..70
    LIST_ITEM@0..70
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..70
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        GRID_TABLE@4..70
          TABLE_SEPARATOR@4..14
            TABLE_SEP_DELIM@4..5 "+"
            TABLE_SEP_DASHES@5..8 "---"
            TABLE_SEP_DELIM@8..9 "+"
            TABLE_SEP_DASHES@9..12 "---"
            TABLE_SEP_DELIM@12..13 "+"
            NEWLINE@13..14 "\n"
          TABLE_HEADER@14..28
            LINE_PREFIX@14..16 "  "
            LINE_PREFIX@16..17 ">"
            LINE_PREFIX@17..18 " "
            TEXT@18..19 "|"
            WHITESPACE@19..20 " "
            TABLE_CELL@20..21
              TEXT@20..21 "a"
            WHITESPACE@21..22 " "
            TEXT@22..23 "|"
            WHITESPACE@23..24 " "
            TABLE_CELL@24..25
              TEXT@24..25 "b"
            WHITESPACE@25..26 " "
            TEXT@26..27 "|"
            NEWLINE@27..28 "\n"
          TABLE_SEPARATOR@28..42
            LINE_PREFIX@28..30 "  "
            LINE_PREFIX@30..31 ">"
            LINE_PREFIX@31..32 " "
            TABLE_SEP_DELIM@32..33 "+"
            TABLE_SEP_EQUALS@33..36 "==="
            TABLE_SEP_DELIM@36..37 "+"
            TABLE_SEP_EQUALS@37..40 "==="
            TABLE_SEP_DELIM@40..41 "+"
            NEWLINE@41..42 "\n"
          TABLE_ROW@42..56
            LINE_PREFIX@42..44 "  "
            LINE_PREFIX@44..45 ">"
            LINE_PREFIX@45..46 " "
            TEXT@46..47 "|"
            WHITESPACE@47..48 " "
            TABLE_CELL@48..49
              TEXT@48..49 "1"
            WHITESPACE@49..50 " "
            TEXT@50..51 "|"
            WHITESPACE@51..52 " "
            TABLE_CELL@52..53
              TEXT@52..53 "2"
            WHITESPACE@53..54 " "
            TEXT@54..55 "|"
            NEWLINE@55..56 "\n"
          TABLE_SEPARATOR@56..70
            LINE_PREFIX@56..58 "  "
            LINE_PREFIX@58..59 ">"
            LINE_PREFIX@59..60 " "
            TABLE_SEP_DELIM@60..61 "+"
            TABLE_SEP_DASHES@61..64 "---"
            TABLE_SEP_DELIM@64..65 "+"
            TABLE_SEP_DASHES@65..68 "---"
            TABLE_SEP_DELIM@68..69 "+"
            NEWLINE@69..70 "\n"
